сделал кнопку открытия/закрытия меню

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,9 +14,22 @@
       <a href="" class="main-navigation__logo-link">
         <img src="./img/logo-mobile.svg" alt="" class="main-navigation__logo logo" width="191" height="38" />
       </a>
+      <ul class="main-navigation__list">
+        <li class="main-navigation__item">
+          <a href="index.html" class="main-navigation__link">главная</a>
+        </li>
+        <li class="main-navigation__item">
+          <a href="catalog.html" class="main-navigation__link">каталог продукции</a>
+        </li>
+        <li class="main-navigation__item">
+          <a href="form.html" class="main-navigation__link">подбор программы</a>
+        </li>
+      </ul>
       <button class="main-navigation__toggle btn" type="button">
         <img class="main-navigation__toggle-open" src="./img/inline-svg/icon-mobile-menu.svg" alt="" width="24"
           height="18" />
+        <img class="main-navigation__toggle-close visuallyhidden" src="./img/inline-svg/icon-close.svg" alt=""
+          width="20" height="20" />
       </button>
     </nav>
   </header>
@@ -322,6 +335,7 @@
       </section>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
